# MOF-Dashboard

./: bun.lockb  colors.txt  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
db_insertion/: clean_data.py  grab_data.py  pyproject.toml
prisma/: data.json  schema.prisma  seed.js  seed.ts
prisma/migrations/20231003075113_init/: migration.sql
prisma/migrations/20231005052643_init/: migration.sql
prisma/migrations/20231024072516_init/: migration.sql
src/: app.html  app.postcss
src/lib/: Chart.svelte  Chart_2.svelte  HomePage.svelte  RevenueExpenses.svelte  Sankey.svelte  SankeyView.svelte  stores.ts
src/lib/assets/: data.json
src/lib/components/: Bar.svelte  Filter.svelte  ModalIFrame.svelte  Navigation.svelte  NestedAccordion.svelte  Sankey.svelte  Scrolly.svelte  Text.svelte  Tooltip.svelte
src/lib/server/: database.ts  prisma.ts
src/routes/: +page.server.ts  +page.svelte
src/routes/(app)/: +layout.server.ts  +layout.svelte
src/routes/(app)/[...path]/: +page.server.ts
src/routes/(app)/[...path]/details/: +page.server.ts  +page.svelte
src/routes/[...path]/: +layout.svelte  +page.server.ts  +page.svelte
